# JavascriptNative

android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/javascriptnative/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: app.js
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  quickjs_wrapper.h  skia_wrapper.cpp
android/app/src/main/java/com/example/javascriptnative/: MainActivity.kt
android/app/src/main/java/com/example/javascriptnative/skia/: SkiaWrapper.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/javascriptnative/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
android/keys/: keystore.prod.jks
android/quick_js/: build.sh
